[package]
name = "fast_clicker"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
] }
eframe = "0.29"
inputbot = "0.6"
rdev = { version = "0.5", features = ["unstable_grab"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
