[package]
name = "nztool_oar"
version = "2.4.2"
edition = "2024"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_HiDpi",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
] }
eframe = "0.29"
rdev = { version = "0.5", features = ["unstable_grab"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
ureq = { version = "2.10", features = ["json"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
